Fix uncollapsed whitespace at end of wrapped lines

--- a/components/BBCode/styles.module.scss
+++ b/components/BBCode/styles.module.scss
@@ -1,3 +1,4 @@
 .bb {
-	white-space: pre-wrap;
+	// We don't use `pre-wrap` because it doesn't collapse whitespace at the end of a wrapped line.
+	white-space: pre-line;
 }
